Fix to Mac commands.
Does not kill server in between models anymore. Saves a lot of time.
Moved NOI tab and removed textArea from CheckPoints and NOI Tab. Instead
colour table cells to show selection.